--- a/styles/style.css
+++ b/styles/style.css
@@ -110,7 +110,8 @@ h2 {
   position: absolute;
   bottom: 0px;
   left: 0px;
-  display: none; }
+  display: none;
+  z-index: 4; }
   @media screen and (min-width: 992px) {
     .coveringCanvas {
       display: block; } }
